--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,19 +46,19 @@
       </div>
       <input type="text" class="form-control" placeholder="Search">
     </div>
-    <select class="form-control" style="width: 334px; height: 48px; padding: 13px 16px;">
-      <option value="">Select Form</option>
-      <option value="">Form 1</option>
-      <option value="">Form 2</option>
-      <option value="">Form 3</option>
-      <option value="">Form 4</option>
+    <select class="form-control" style="width: 334px; height: 48px; padding: 13px 16px;" (change)="changeFrom($event)">
+      <option value="">Select From</option>
+      <option value="denisgordiyenya@gmail.com">denisgordiyenya&#64;gmail.com</option>
+      <option value="kronvold@live.com">kronvold&#64;live.com</option>
+      <option value="osrin@gmail.com">osrin&#64;gmail.com</option>
+      <option value="zendu@zendu.com">zendu&#64;zendu.com</option>
     </select>
-    <select class="form-control" style="width: 334px; height: 48px; padding: 13px 16px;">
+    <select class="form-control" style="width: 334px; height: 48px; padding: 13px 16px;" (change)="changeStatus($event)">
       <option value="">Select Status</option>
-      <option value="low">Low Risk</option>
-      <option value="review">Need Review</option>
-      <option value="unassigned">Unassigned</option>
-      <option value="uncomplete">Uncomplete</option>
+      <option value="Low Risk">Low Risk</option>
+      <option value="Needs Review">Needs Review</option>
+      <option value="Unassigned">Unassigned</option>
+      <option value="Uncomplete">Uncomplete</option>
     </select>
     <div [formGroup]="formGroup">
       <p-calendar 
@@ -81,11 +81,12 @@
   </div>
 
   @if (viewMode == 'map') {
-    <div class="d-flex flex-row bd-highlight" style="gap:20px">
+    <div class="d-flex flex-row bd-highlight" style="gap:20px; min-height: 600px;">
       <div class="d-flex flex-column bd-highlight"  style="width: 30%;">
         <ul class="list-group mockdata-list">
           @for (item of mockData; track item.id) {
-          <li class="list-group-item" style="font-size: 16px; font-weight: 700; line-height: 20.8px">
+           
+          <li  *ngIf="(selectedStatus == item.status || selectedStatus == '') && (selectedFrom == item.from || selectedFrom == '')" class="list-group-item" style="font-size: 16px; font-weight: 700; line-height: 20.8px">
             <p>{{ item.title }}</p>
             @if (item.status == 'Uncomplete') {
             <span class="badge badge-primary badge-pill" style="float:right; width: 128px;font-size: 14px; font-weight: 500; background-color: #FF3D001A;  color: #FF3D00;">
@@ -116,17 +117,31 @@
           }
         </ul>
       </div>
-      <div  style="width: 70%;">
+      <div style="width: 70%; position: relative;">
+        <div style="height: 40px;width: 40px;background-color: #fff;position: absolute;z-index: 999;box-shadow: 5px 5px 5px #c3c3c3;right: 40px;top: 10px;">
+          <img src="assets/images/zoom.png" style="width: 28px; height: 28px; text-align: center; margin:7px;"/>
+        </div>
+        <div style="height: 96px;width: 48px;background-color: #fff;position: absolute;z-index: 999;box-shadow: 5px 5px 5px #c3c3c3;right: 40px;bottom: 180px;">
+          <span><i class="fa fa-plus" style="font-size: 22px;margin: 14px;"></i></span>
+          <hr style="width:80%; margin:0 auto;"/>
+          <span><i class="fa fa-minus" style="font-size: 22px;margin: 14px;"></i></span>
+        </div>
+        <div style="height: 48px;width: 48px; border-radius: 40px; background-color: #fff;position: absolute;z-index: 999;box-shadow: 5px 5px 5px #c3c3c3;right: 40px;bottom: 80px;">
+          <img src="assets/images/layers.png" style="width: 28px; height: 28px; text-align: center; margin:10px;"/>
+        </div>
+        <div style="height: 48px;width: 48px; border-radius: 40px; background-color: #fff;position: absolute;z-index: 999;box-shadow: 5px 5px 5px #c3c3c3;right: 40px;bottom: 20px;">
+          <img src="assets/images/cancel.png" style="width: 20px; height: 20px; text-align: center; margin:15px;"/>
+        </div>
         <div class="map" id="map" class="match-parent"></div>
       </div>
     </div>
   } @else if (viewMode == 'list') {
     <div class="d-flex flex-row bd-highlight">
-      <table class="table table-bordered m-3">
+      <table class="table m-3">
         <thead>
           <tr>
             <th>
-              <input type="checkbox" name="selectall" id="selectall"  />
+              <input type="checkbox" name="selectall" id="selectall"  (change)="selectAll()"/>
             </th>
             <th>Task</th>
             <th>Status</th>
@@ -138,26 +153,34 @@
         </thead>
         <tbody>
           @for (item of mockTableData; track item.id) {
-          <tr>
-            <td><input type="checkbox" name="selecton_{{item.id}}" id="selecton_{{item.id}}"  /></td>
+          <tr *ngIf="(selectedStatus == item.status || selectedStatus == '') && (selectedFrom == item.from || selectedFrom == '')">
+            <td><input type="checkbox" name="selecton_{{item.id}}" id="selecton_{{item.id}}"  [attr.checked]="selectAllCheckBoxes ? 'checked' : null"/></td>
             <td>{{ item.task }}</td>
             <td>
-              <span  [ngClass]="{'low-risk': item.status === 'Low Risk', 'uncomplete' : item.status === 'Uncomplete' , 'unassigned' : item.status === 'Unassigned'  }">
-              <i class="fa fa-circle" style="width: 12px; font-size: 12px;"></i> {{ item.status }}
-                </span>
+              <span [ngClass]="{'low-risk': item.status === 'Low Risk', 'uncomplete' : item.status === 'Uncomplete' , 'unassigned' : item.status === 'Unassigned'  }">
+                <i class="fa fa-circle" style="width: 12px; font-size: 12px;"></i> {{ item.status }}
+              </span>
             </td>
             <td>{{ item.from }}</td>
             <td>{{ item.to }}</td>
             <td>{{ item.address }}</td>
-            <td>{{ item.due_date }}</td>
+            @if (item.is_due) {
+              <td style="color:#FF3D00;">{{ item.due_date }}</td>
+            } @else {
+              <td>{{ item.due_date }}</td>
+            }
           </tr>
           }
         </tbody>
 
       </table>
     </div>
-    <div class="d-flex  pull-right">
-      <nav aria-label="Page navigation example" style="background: none;">
+    <div class="d-flex flex-row ">
+      <div class="d-flex pull-left w-50">
+        <p>1-10 of 176 submissions</p>
+      </div>
+      <div class="d-flex pull-right w-100">
+        <nav aria-label="Page navigation example"  class="pull-right" style="background: none;">
         <ul class="pagination">
           <li class="page-item disabled">
             <a class="page-link" href="#" aria-label="Previous">
@@ -165,23 +188,23 @@
               <span class="sr-only">Previous</span>
             </a>
           </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item"><a class="page-link" href="#">4</a></li>
-          <li class="page-item"><a class="page-link" href="#">5</a></li>
-          <li class="page-item"><a class="page-link" href="#">6</a></li>
-          <li class="page-item"><a class="page-link" href="#">7</a></li>
-          <li class="page-item"><a class="page-link" href="#">8</a></li>
-          <li class="page-item"><a class="page-link" href="#">9</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">1</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">2</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">3</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">4</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">5</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">6</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">7</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">8</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;"><a style="border-radius: 5px; color:#060C1B" class="page-link" href="#">9</a></li>
+          <li class="page-item me-2" style="border-radius: 5px;">       <a class="page-link" href="#" aria-label="Next">
               <span aria-hidden="true">&raquo;</span>
               <span class="sr-only">Next</span>
             </a>
           </li>
         </ul>
-      </nav>
+        </nav>
+      </div>
     </div>
 
   }
